vpromq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromq01
  template:
    metadata:
      labels:
        app: vpromq01
    spec:
      containers:
        - name: vpromq01
          image: rabbitmq:4.0.6
          ports:
            - containerPort: 5672
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vpromq01
  ports:
    - port: 5672
      targetPort: 5672
  type: ClusterIP
